# WireFish

./: Cargo.toml  LICENSE  README.md  wirefish_packets.jsonl
.cargo/: config.toml
src/: lib.rs  main.rs
src/core/: alerts.rs  capture.rs  classifier.rs  enrichment.rs  inspect.rs  mod.rs  models.rs  parser.rs  storage.rs
ui/tauri/pages/: ip_details.jsx
ui/tauri/src/: main.js
wirefish/src/: main.rs
wirefish/src/core/: capture.rs  enrichment.rs  models.rs  parser.rs
wirefish/ui/tauri/src/pages/: alerts.jsx  dashboard.jsx  packets.jsx
